--- a/app/templates/player_bar.html
+++ b/app/templates/player_bar.html
@@ -6,12 +6,12 @@
             </a>
             <a class="play-pause">
                 <span class='ion-play'
-                   ng-show="!song.playing"
+                   ng-show="!playerBar.songPlayer.currentSong.playing"
                    ng-click="playerBar.songPlayer.play(song)">
                  </span>
                  <span class='ion-pause'
-                       ng-show="song.playing"
-                       ng-click="playerBar.songPlayer.pause(song)">
+                   ng-show="playerBar.songPlayer.currentSong.playing"
+                   ng-click="playerBar.songPlayer.pause(song)">
                  </span>
             </a>
             <a class="next">
